# git-data

./: .rules  Cargo.toml  README.md
.config/: release-please-config.json  release-please-manifest.json
.github/workflows/: CD.yml
crates/git-chain/: CHANGELOG.md  Cargo.toml
crates/git-chain/src/: lib.rs  main.rs  tests.rs
crates/git-ledger/: CHANGELOG.md  Cargo.toml
crates/git-ledger/src/: cli.rs  lib.rs  tests.rs
crates/git-metadata/: CHANGELOG.md  Cargo.toml
crates/git-store/: Cargo.toml
crates/git-store/src/: lib.rs
docs/: plan.md
docs/design/: ea-design-doc.md  ea-gix-design-doc.md  ea-revised-design-doc.md  git-data.md  git-db.md  git-store.md
docs/dev/: git-store-dev-plan.md
git-metadata/: CHANGELOG.md
src/: cli.rs  exe.rs  lib.rs  main.rs  tests.rs
