[package]
name = "git-store"
version = "0.0.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
git2 = { workspace = true }
git-chain = { workspace = true }
git-ledger = { workspace = true }
git-metadata = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
